--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Xinfone Website
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
+	   <link href="idx.css" rel="stylesheet">
+    <title>信蜂传媒 - 视讯技术应用创新</title>
+    <meta name="description" content="信蜂传媒视讯技术应用创新。">
+    <meta name="keywords" content="信蜂传媒,xinfone">
+    <meta name="author" content="ads@xinfone.cn">
+  </head><body> 
+<video autoplay loop muted poster="pst.jpg" id="background">
+<source src="bgv.mp4" type="video/mp4">
+</video>
+<div class="container">
+  <nav></nav>
+  <header>
+    <h1>Xinfone</h1>
+    <p>致力于视讯技术应用创新</p>
+    <p>+合作邮箱: ads@hnu.edu.cn</p>
+    <p>+站点反馈: ads@xinfone.cn</p>
+  </header>
+  <section></section>
+  <footer></footer>
+</div> <!--/.container -->
+</body></html>
