--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-	   <link href="idx.css" rel="stylesheet">
+	   <link href="https://xinfone.gitee.io/idx.css" rel="stylesheet">
     <title>信蜂传媒 - 视讯技术应用创新</title>
     <meta name="description" content="信蜂传媒视讯技术应用创新。">
     <meta name="keywords" content="信蜂传媒,xinfone">
     <meta name="author" content="ads@xinfone.cn">
   </head><body> 
-<video autoplay loop muted poster="pst.jpg" id="background">
-<source src="bgv.mp4" type="video/mp4">
+<video autoplay loop muted poster="https://xinfone.gitee.io/pst.jpg" id="background">
+<source src="https://xinfone.gitee.io/bgv.mp4" type="video/mp4">
 </video>
 <div class="container">
   <nav></nav>
