--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <p>致力于视讯技术应用创新</p>
     <p>+合作邮箱: ads@hnu.edu.cn</p>
     <p>+站点反馈: ads@xinfone.cn</p>
+	  <p>+开放资源: <a href="https://get.xinfone.com/open/" target="_blank">https://get.xinfone.com/open</a></p>
   </header>
   <section></section>
   <footer></footer>
