--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <p>+合作邮箱: ads@hnu.edu.cn</p>
     <p>+站点反馈: ads@xinfone.cn</p>
 	  <p>+开放资源: <a href="https://get.xinfone.com/open/" target="_blank">https://get.xinfone.com/open</a></p>
-	  <p>+FFmpeg专题: <a href="https://get.xinfone.com/ffmpeg/" target="_blank">https://get.xinfone.com/ffmpeg</a></p>
+	  <p>+ffmpeg: <a href="https://get.xinfone.com/ffmpeg/" target="_blank">https://get.xinfone.com/ffmpeg</a></p>
   </header>
   <section></section>
   <footer></footer>
